--- a/css/shared.css
+++ b/css/shared.css
@@ -129,3 +129,8 @@ img {
 label {
   font-weight: 700;
 }
+
+[contenteditable="true"]:focus {
+  border: 4px dashed rgba(255, 255, 255, 0.75);
+  outline: none;
+}
