--- a/css/shared.css
+++ b/css/shared.css
@@ -153,3 +153,7 @@ label {
   background-color: unset;
   outline: none;
 }
+
+.drag-hover {
+  background-color: rgba(255, 255, 255, 0.1) !important;
+}
