--- a/css/shared.css
+++ b/css/shared.css
@@ -67,7 +67,7 @@ a {
 .app-wrapper {
   display: flex;
   margin: auto;
-  height: 100vh;
+  height: var(--screen-height);
   max-width: 1920px;
   max-height: 1080px;
 }
